# hw-hspec-hedgehog

./: .gitignore  .travis.yml  README.md  circle.yml  hunit-hedgehog.cabal  hw-hspec-hedgehog.cabal  hw-hunit-hedgehog.cabal  package.yaml  project.sh  stack.yaml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: workflow.yml
scripts/: bintray-credentials.sh  check-env-variables.sh  fetch
src/HaskellWorks/HSpec/: Hedgehog.hs
src/HaskellWorks/HUnit/: Hedgehog.hs
src/HaskellWorks/Hspec/: Hedgehog.hs
test/HaskellWorks/HSpec/: HedgehogSpec.hs
test/HaskellWorks/HUnit/: HedgehogSpec.hs
test/HaskellWorks/Hspec/: HedgehogSpec.hs
