name:           hw-hspec-hedgehog
version:        0.1.0.6
synopsis:       Interoperability between hspec and hedgehog
description:    Interoperability between hspec and hedgehog.
category:       Test
homepage:       https://github.com/haskell-works/hw-hspec-hedgehog#readme
bug-reports:    https://github.com/haskell-works/hw-hspec-hedgehog/issues
author:         John Ky
maintainer:     newhoggy@gmail.com
copyright:      2017 John Ky
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.4.2, GHC == 8.2.2, GHC == 8.0.2, GHC == 7.10.3
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-hspec-hedgehog

library
  exposed-modules:
      HaskellWorks.Hspec.Hedgehog
  other-modules:
      Paths_hw_hspec_hedgehog
  hs-source-dirs:
      src
  build-depends:
      HUnit >=1.5 && <1.7
    , base >=4.7 && <5
    , call-stack >=0.1 && <0.2
    , hedgehog >=0.5 && <0.7
    , hspec >=2.4 && <2.6
    , transformers >=0.4 && <0.6
  default-language: Haskell2010

test-suite hw-hspec-hedgehog-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      HaskellWorks.Hspec.HedgehogSpec
      Paths_hw_hspec_hedgehog
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hedgehog >=0.5 && <0.7
    , hspec >=2.4 && <2.6
    , hw-hspec-hedgehog
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
