name:                 hw-hunit-hedgehog
version:              0.1.0.0
-- synopsis:
-- description:
homepage:             https://github.com/githubuser/hw-hunit-hedgehog#readme
license:              BSD3
license-file:         LICENSE
author:               John Ky
maintainer:           newhoggy@gmail.com
copyright:            2017 John Ky
category:             Web
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.HUnit.Hedgehog
  build-depends:        base >= 4.7 && < 5
                      , call-stack
                      , hedgehog
                      , hspec
                      , HUnit
  default-language:     Haskell2010

test-suite hw-hunit-hedgehog-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , hedgehog
                      , hspec
                      , hw-hunit-hedgehog
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hw-hunit-hedgehog
